[gd_scene load_steps=3 format=3 uid="uid://bgyonbnnlb414"]

[ext_resource type="Script" path="res://scripts/weapon_handler.gd" id="1_osyye"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vmy8u"]
radius = 300.0

[node name="WeaponHandler" type="Node2D" groups=["orb"]]
script = ExtResource("1_osyye")

[node name="OrbAttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LightAttackTimer" type="Timer" parent="."]
autostart = true

[node name="FlameAttackTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="FlameDetectionArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlameDetectionArea" groups=["enemy"]]
shape = SubResource("CircleShape2D_vmy8u")

[connection signal="timeout" from="FlameAttackTimer" to="." method="_on_flame_attack_timer_timeout"]
[connection signal="body_entered" from="FlameDetectionArea" to="." method="_on_flame_detection_area_body_entered"]
[connection signal="body_exited" from="FlameDetectionArea" to="." method="_on_flame_detection_area_body_exited"]
